--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Contact Form</title>
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
     <nav>
@@ -14,7 +14,7 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="#">Blog</a>
+            <a href="blog.html">Blog</a>
           </li>
         </ul>
       </div>
@@ -64,6 +64,6 @@
         <button type="button" onclick="submitData()">Submit</button>
       </div>
     </form>
-    <script src="contact.js"></script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
