--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,13 @@
   <head>
     <title>Blog Page</title>
     <link rel="stylesheet" href="css/blog.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <nav>
@@ -10,18 +17,33 @@
           <li>
             <img src="image/logo.png" alt="logo" />
           </li>
-          <li>
+          <li class="item-collapse">
             <a href="index.html">Home</a>
           </li>
-          <li>
+          <li class="item-collapse">
             <a class="active" href="blog.html">Blog</a>
           </li>
         </ul>
       </div>
-      <div class="nav-right">
+      <div class="nav-right item-collapse">
         <a href="contact.html">Contact</a>
       </div>
+      <div class="nav-right" id="barsmenu">
+        <button
+          style="background-color: transparent; border: none; cursor: pointer"
+          onclick="openHamburger()"
+        >
+          <i class="fa-2x fa-solid fa-bars"></i>
+        </button>
+      </div>
     </nav>
+
+    <div class="hamburger-nav-container" id="hamburger-nav-container">
+      <a href="index.html">Home</a>
+      <a href="blog.html" class="hamburger-active">Blog</a>
+      <a href="contact.html">Contact Me</a>
+    </div>
+
     <div class="blog">
       <div class="blog-form">
         <div class="form-container">
@@ -85,5 +107,6 @@
       </div>
     </div>
     <script src="js/blog.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
