--- a/index.html
+++ b/index.html
@@ -17,23 +17,38 @@
           <li>
             <img src="image/logo.png" alt="logo" />
           </li>
-          <li>
+          <li class="item-collapse">
             <a class="active" href="index.html">Home</a>
           </li>
-          <li>
+          <li class="item-collapse">
             <a href="blog.html">Blog</a>
           </li>
         </ul>
       </div>
-      <div class="nav-right">
+      <div class="nav-right item-collapse">
         <a href="contact.html">Contact</a>
       </div>
+      <div class="nav-right" id="barsmenu">
+        <button
+          style="background-color: transparent; border: none; cursor: pointer"
+          onclick="openHamburger()"
+        >
+          <i class="fa-2x fa-solid fa-bars"></i>
+        </button>
+      </div>
     </nav>
+
+    <div class="hamburger-nav-container" id="hamburger-nav-container">
+      <a href="index.html" class="hamburger-active">Home</a>
+      <a href="blog.html">Blog</a>
+      <a href="contact.html">Contact Me</a>
+    </div>
 
     <div class="container">
       <section>
         <div class="left">
           <div
+            class="card-container"
             style="
               width: 350px;
               border: 1px solid black;
@@ -130,5 +145,6 @@
         </div>
       </section>
     </div>
+    <script src="js/index.js"></script>
   </body>
 </html>
