--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,9 @@
           <li class="item-collapse">
             <a class="active" href="blog.html">Blog</a>
           </li>
+          <li class="item-collapse">
+            <a href="testimonial.html">Testimonial</a>
+          </li>
         </ul>
       </div>
       <div class="nav-right item-collapse">
