--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,9 @@
           <li>
             <a href="blog.html">Blog</a>
           </li>
+          <li class="item-collapse">
+            <a href="testimonial.html">Testimonial</a>
+          </li>
         </ul>
       </div>
       <div class="nav-right">
