--- a/test.html
+++ b/test.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/breakpoint.css" />
-    <title>Test</title>
+    <title>Document</title>
   </head>
   <body>
-    <div class="container"></div>
+    <script src="exercise/1.hof.js"></script>
+    <script src="exercise/2.callback.js"></script>
+    <script src="exercise/3.custom.js"></script>
   </body>
 </html>
